--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
 	<div class="container">
 		<div class="heading">
-			<h2>Ludo / <span id="mainScorElm">35</span></h2>
+			<h2>Ludo : <span id="mainScorElm"></span></h2>
 		</div>
 		<div class="lodue-image">
 			<div class="image1">
-				<img src="image/dice-6.png" alt="image is not found">
+				<img src="defaul-image/default.png" id="p1DiceElm" alt="image is not found">
 			</div>
 			<div class="image2">
-				<img src="image/dice-6.png" alt="image is not found">
+				<img src="defaul-image/default.png" id="p2DiceElm" alt="image is not found">
 			</div>
 			<div class="image3">
-				<img src="image/dice-6.png" alt="image is not found">
+				<img src="defaul-image/default.png" id="p3DiceElm" alt="image is not found">
 			</div>
 			<div class="image4">
-				<img src="image/dice-6.png" alt="image is not found">
+				<img src="defaul-image/default.png" id="p4DiceElm" alt="image is not found">
 			</div>
 		</div>
 		<div class="all-btn">
@@ -56,16 +56,16 @@
 		<div class="score-container">
 			<h2 class="player-store-design">Player Score Store</h2>
 			<div class="pragraph1">
-				<p class="p1">Player-1 : <span id="p1ScorElm">1</span></p>
+				<p class="p1">Player-1 : <span id="p1ScorElm"></span></p>
 			</div>
 			<div class="pragraph2">
-				<p class="p2">Player-2 : <span id="p1ScorElm">2</span></p>	
+				<p class="p2">Player-2 : <span id="p2ScorElm"></span></p>	
 			</div>
 			<div class="pragraph3">
-				<p class="p3">Player-3 : <span id="p1ScorElm">3</span></p>	
+				<p class="p3">Player-3 : <span id="p3ScorElm">3</span></p>	
 			</div>
 			<div class="pragraph4">
-				<p class="p4">Player-4 : <span id="p1ScorElm">4</span></p>	
+				<p class="p4">Player-4 : <span id="p4ScorElm">4</span></p>	
 			</div>
 		</div>
 	</div>
