--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="all-btn">
-			<!-- <form>
+			<!-- <form> /
 				<input type="text" id="inputBtnElm" autocomplete="off">
 				<input type="submit" id="submitBtnElm">
 			</form> -->
