--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 		</div>
 	</div>
 
+	<div class="successMessages">
+		<img src="">
+	</div>
+
 	<script src="js/script.js"></script>
 </body>
 </html>
